fix collaps

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -109,3 +109,6 @@ li{
 .show{
   display: block;
 }
+.hide{
+  display: none;
+}
